2025-03-04T01:40:57Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/13644358182 # 1160
* notice: Stats Output Repository: https://github.com/andry81-stats/tacklebar--totalcmd-stats/commits?branch=master&time_zone=utc&until=2025-03-04
* notice: query file size: 26208
* notice: accum prev / next / diff: re vi: 0 3479 / 0 3480 / +0 +1

2025-03-03T12:40:49Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/13631124025 # 1159
* notice: Stats Output Repository: https://github.com/andry81-stats/tacklebar--totalcmd-stats/commits?branch=master&time_zone=utc&until=2025-03-03
* notice: query file size: 26208
* notice: accum prev / next / diff: re vi: 0 3478 / 0 3479 / +0 +1

2025-02-28T01:39:31Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/13579507649 # 1152
* notice: Stats Output Repository: https://github.com/andry81-stats/tacklebar--totalcmd-stats/commits?branch=master&time_zone=utc&until=2025-02-28
* notice: query file size: 26208
* notice: accum prev / next / diff: re vi: 0 3477 / 0 3478 / +0 +1

2025-02-27T01:39:24Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/13557022680 # 1150
* notice: Stats Output Repository: https://github.com/andry81-stats/tacklebar--totalcmd-stats/commits?branch=master&time_zone=utc&until=2025-02-27
* notice: query file size: 26208
* notice: accum prev / next / diff: re vi: 0 3473 / 0 3477 / +0 +4

2025-02-26T12:40:08Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/13544083597 # 1149
* notice: Stats Output Repository: https://github.com/andry81-stats/tacklebar--totalcmd-stats/commits?branch=master&time_zone=utc&until=2025-02-26
* notice: query file size: 26208
* notice: accum prev / next / diff: re vi: 0 3469 / 0 3473 / +0 +4

2025-02-26T01:38:52Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/13534658322 # 1148